✨  Updating Parameterized Tests from UserController (PUT)